# instancesegmentation

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
instancesegmentation/data/: circledata.py
instancesegmentation/loss/: distancemetric.py  errormetric.py  metricloss.py
instancesegmentation/model/: embeddingmodel.py
scripts/: inspect_circle_data.py  test_instance_segmentation.py  train_embedding_model.py
tests/data/: circle_data_test.py  circledata_test.py
tests/loss/: distancemetric_test.py  errormetric_test.py  metricloss_test.py
tests/model/: embeddingmodel_test.py
