[tool.poetry]
name = "instancesegmentation"
version = "1.0.0"
description = "TensorFlow instance segmentation based on learned embeddings"
authors = ["Patrick Fuchs <patrick.fuchs@mailbox.org>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "instancesegmentation" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.2.13"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-isort = "^6.0.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
